--- a/src/css/common.css
+++ b/src/css/common.css
@@ -20,6 +20,12 @@ img {
 /* add style */
 
 button{
+
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  /* height: 90vh; */
+
   margin: 0 20px;
   width: 11em;
   height: 30px;
@@ -35,14 +41,15 @@ button:disabled {
   color:#212121;
 }
 
-.boxElement {
+/* .boxElement {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 90vh;
-}
+} */
 
 input {
+  margin-left: auto;
   height: 30px;
   text-align: center;
   font-size: large;
@@ -51,7 +58,7 @@ input {
 .timer {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .field {
